docker-images/syntax-highlighter/crates/syntax-analysis/src/highlighting/snapshots/syntax_analysis__highlighting__syntect_scip__test__multibyte.cs.snap
---
source: crates/syntax-analysis/src/highlighting/syntect_scip.rs
expression: "snapshot_sciptect_documents(&document, &contents)"
---
  using System;
//^^^^^ Keyword keyword.control.import.cs
//      ^^^^^^ IdentifierNamespace meta.path.cs
//            ^ PunctuationDelimiter punctuation.terminator.cs
  
  namespace Example
//^^^^^^^^^ IdentifierNamespace storage.type.namespace.cs
//          ^^^^^^^ Identifier entity.name.namespace.cs
  {
//^ PunctuationBracket punctuation.section.block.begin.cs
      public void Something()
//    ^^^^^^ Keyword storage.modifier.access.cs
//           ^^^^ IdentifierType storage.type.cs
//                ^^^^^^^^^ IdentifierFunction entity.name.function.cs
//                         ^ PunctuationBracket punctuation.section.parameters.begin.cs
//                          ^ PunctuationBracket punctuation.section.parameters.end.cs
      {
//    ^ PunctuationBracket punctuation.section.block.begin.cs
          var x = "世界";
//        ^^^ IdentifierType storage.type.variable.cs
//            ^ Identifier variable.other.cs
//              ^ IdentifierOperator keyword.operator.assignment.variable.cs
//                ^^^^ StringLiteral string.quoted.double.cs
//                    ^ PunctuationDelimiter punctuation.terminator.statement.cs
          var y = "世界 Hello, 世界";
//        ^^^ IdentifierType storage.type.variable.cs
//            ^ Identifier variable.other.cs
//              ^ IdentifierOperator keyword.operator.assignment.variable.cs
//                ^^^^^^^^^^^^^^ StringLiteral string.quoted.double.cs
//                              ^ PunctuationDelimiter punctuation.terminator.statement.cs
  
          var emoji = "🥳";
//        ^^^ IdentifierType storage.type.variable.cs
//            ^^^^^ Identifier variable.other.cs
//                  ^ IdentifierOperator keyword.operator.assignment.variable.cs
//                    ^^^ StringLiteral string.quoted.double.cs
//                       ^ PunctuationDelimiter punctuation.terminator.statement.cs
      }
//    ^ PunctuationBracket punctuation.section.block.end.cs
  }
//^ PunctuationBracket punctuation.section.block.end.cs

