docker-images/syntax-highlighter/crates/syntax-analysis/src/highlighting/snapshots/syntax_analysis__highlighting__syntect_scip__test__off-by-one.yaml.snap
---
source: crates/syntax-analysis/src/highlighting/syntect_scip.rs
expression: "snapshot_sciptect_documents(&document, &contents)"
---
  pog:
//^^^ StringLiteralKey entity.name.tag.yaml
//   ^ PunctuationBracket punctuation.separator.key-value.mapping.yaml
    test: everythinghereshouldbehighlighted
//  ^^^^ StringLiteralKey entity.name.tag.yaml
//      ^ PunctuationBracket punctuation.separator.key-value.mapping.yaml
//        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ StringLiteral string.unquoted.plain.out.yaml

