docker-images/syntax-highlighter/crates/syntax-analysis/src/highlighting/snapshots/syntax_analysis__highlighting__syntect_scip__test__sql.sql.snap
---
source: crates/syntax-analysis/src/highlighting/syntect_scip.rs
expression: "snapshot_sciptect_documents(&document, &contents)"
---
  WITH event_log_stats AS (
//^^^^ Keyword keyword.other.DML.sql
//                     ^^ Keyword keyword.operator.assignment.alias.sql
      SELECT
//    ^^^^^^ Keyword keyword.other.DML.sql
          NULLIF(COUNT(*) FILTER (WHERE name IN ('ViewCodeMonitoringPage', 'CodeMonitoringPageViewed')), 0) :: INT AS code_monitoring_page_views,
//               ^^^^^ IdentifierFunction support.function.aggregate.sql
//                     ^ Identifier variable.language.star.sql
//                                ^^^^^ Keyword keyword.other.DML.sql
//                                           ^^ Keyword keyword.operator.logical.sql
//                                               ^^^^^^^^^^^^^^^^^^^^^^^^ StringLiteral string.quoted.single.sql
//                                                                         ^^^^^^^^^^^^^^^^^^^^^^^^^^ StringLiteral string.quoted.single.sql
//                                                                                                       ^ NumericLiteral constant.numeric.sql
//                                                                                                             ^^^ IdentifierType storage.type.sql
//                                                                                                                 ^^ Keyword keyword.operator.assignment.alias.sql
      FROM event_logs
//    ^^^^ Keyword keyword.other.DML.sql
      WHERE
//    ^^^^^ Keyword keyword.other.DML.sql
          name IN (
//             ^^ Keyword keyword.operator.logical.sql
              -- The events that share a line are events that changed names and are aliases of each other
//            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Comment comment.line.double-dash.sql
              'CodeMonitoringLogsPageViewed'
//            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ StringLiteral string.quoted.single.sql
          )
  )
  SELECT
//^^^^^^ Keyword keyword.other.DML.sql
      event_log_stats.code_monitoring_page_views,
      event_log_stats.create_code_monitor_page_views,
      trigger_jobs.p90_trigger_run_time
  FROM
//^^^^ Keyword keyword.other.DML.sql
      event_log_stats,
      email_actions,
      slack_actions,
      webhook_actions,
      action_jobs,
      trigger_jobs
  ;

